tests/base/valid/Define_Valid_2.whiley
define dr2point as {real x, real y}

void System::main([string] args):
     p = {x:1.0,y:2.23}
     this.out.println(str(p))

