tests/base/invalid/Record_Invalid_2.whiley
define Broken as { x: 1, y: 2}

define Global as { Broken field }